--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,7 @@ input,
 button {
   @apply focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-neutral-400 focus-visible:ring-offset-2 focus-visible:ring-offset-neutral-50 dark:focus-visible:ring-neutral-600 dark:focus-visible:ring-offset-neutral-900;
 }
+
+body::-webkit-scrollbar {
+  display: none;
+}
